--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,9 +1,9 @@
 * {
-	border: none;
-	border-radius: 10;
-    font-family: "JetbrainsMono Nerd Font" ;
-	font-size: 15px;
-	min-height: 10px;
+    border: none;
+    border-radius: 10px;
+    font-family: "JetbrainsMono Nerd Font Propo";
+    font-size: 15px;
+    min-height: 10px;
 }
 
 window#waybar {
