--- a/waybar/style.css
+++ b/waybar/style.css
@@ -7,7 +7,7 @@
 }
 
 window#waybar {
-	background: transparent;
+	background: rgba(0, 0, 0, 0.3);
 }
 
 window#waybar.hidden {
@@ -29,7 +29,7 @@ window#waybar.hidden {
 	font-size: 4px;
 	margin-bottom: 0px;
 	border-radius: 10px;
-	background: rgba(22, 19, 32, 0.7);
+	background: #161320;
 	transition: none;
 }
 
@@ -76,7 +76,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(189, 147, 249, 0.7);
+	background: #bd93f9;
 }
 
 #pulseaudio {
@@ -88,7 +88,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #1A1826;
-	background: rgba(250, 227, 176, 0.7);
+	background: #FAE3B0;
 }
 
 #battery {
@@ -100,16 +100,16 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(181, 232, 224, 0.7);
+	background: #B5E8E0;
 }
 
 #battery.charging, #battery.plugged {
 	color: #161320;
-    background-color: rgba(181, 232, 224, 0.7);
+    background-color: #B5E8E0;
 }
 
 #battery.critical:not(.charging) {
-    background-color: rgba(181, 232, 224, 0.7);
+    background-color: #B5E8E0;
     color: #161320;
     animation-name: blink;
     animation-duration: 0.5s;
@@ -134,7 +134,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(248, 189, 150, 0.7);
+	background: #F8BD96;
 }
 #clock {
 	margin-top: 4px;
@@ -145,7 +145,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(171, 233, 179, 0.7);
+	background: #ABE9B3;
 	/*background: #1A1826;*/
 }
 
@@ -158,7 +158,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(221, 182, 242, 0.7);
+	background: #DDB6F2;
 }
 #cpu {
 	margin-top: 4px;
@@ -169,7 +169,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(150, 205, 251, 0.7);
+	background: #96CDFB;
 }
 
 #tray {
@@ -181,7 +181,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #B5E8E0;
-	background: rgba(22, 19, 32, 0.7);
+	background: #161320;
 }
 
 #custom-launcher {
@@ -193,7 +193,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
     color: #89DCEB;
-    background: rgba(22, 19, 32, 0.7);
+    background: #161320;
 }
 
 #custom-power {
@@ -207,7 +207,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(242, 143, 173, 0.7);
+	background: #F28FAD;
 }
 
 #custom-wallpaper {
@@ -219,7 +219,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(201, 203, 255, 0.7);
+	background: #C9CBFF;
 }
 
 #custom-updates {
@@ -231,7 +231,7 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(232, 162, 175, 0.7);
+	background: #E8A2AF;
 }
 
 #custom-media {
@@ -243,5 +243,5 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: rgba(242, 205, 205, 0.7);
+	background: #F2CDCD;
 }
