--- a/waybar/style.css
+++ b/waybar/style.css
@@ -7,7 +7,8 @@
 }
 
 window#waybar {
-	background: rgba(0, 0, 0, 0.85);
+	background: rgba(0, 0, 0, 0.77);
+	border-radius: 0;
 }
 
 window#waybar.hidden {
