--- a/waybar/style.css
+++ b/waybar/style.css
@@ -236,7 +236,7 @@ window#waybar.hidden {
 	background: #E8A2AF;
 }
 
-#disk {
+#custom-disk {
 	margin-top: 3px;
 	margin-left: 8px;
 	padding-left: 10px;
