--- a/waybar/style.css
+++ b/waybar/style.css
@@ -147,6 +147,18 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
+	background: #F8BD96;
+}
+
+#clock-date {
+	margin-top: 3px;
+	margin-left: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-bottom: 3px;
+	border-radius: 10px;
+	transition: none;
+	color: #161320;
 	background: #ABE9B3;
 }
 
