--- a/waybar/style.css
+++ b/waybar/style.css
@@ -150,7 +150,7 @@ window#waybar.hidden {
 	background: #F8BD96;
 }
 
-#clock-date {
+#clock#date {
 	margin-top: 3px;
 	margin-left: 8px;
 	padding-left: 10px;
