--- a/waybar/style.css
+++ b/waybar/style.css
@@ -25,6 +25,7 @@ window#waybar.hidden {
     color: transparent;
 	background: transparent;
 }
+
 #workspaces {
 	margin-top: 3px;
 	margin-left: 12px;
@@ -138,6 +139,7 @@ window#waybar.hidden {
 	color: #161320;
 	background: #F8BD96;
 }
+
 #clock {
 	margin-top: 3px;
 	margin-left: 8px;
@@ -150,7 +152,7 @@ window#waybar.hidden {
 	background: #F8BD96;
 }
 
-#clock#date {
+#clock-date {
 	margin-top: 3px;
 	margin-left: 8px;
 	padding-left: 10px;
@@ -173,6 +175,7 @@ window#waybar.hidden {
 	color: #161320;
 	background: #DDB6F2;
 }
+
 #cpu {
 	margin-top: 3px;
 	margin-left: 8px;
