--- a/waybar/style.css
+++ b/waybar/style.css
@@ -128,18 +128,6 @@ window#waybar.hidden {
     }
 }
 
-#backlight {
-	margin-top: 3px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 3px;
-	border-radius: 10px;
-	transition: none;
-	color: #161320;
-	background: #F8BD96;
-}
-
 #clock {
 	margin-top: 3px;
 	margin-left: 8px;
@@ -227,18 +215,6 @@ window#waybar.hidden {
 	background: #F28FAD;
 }
 
-#custom-wallpaper {
-	margin-top: 3px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 3px;
-	border-radius: 10px;
-	transition: none;
-	color: #161320;
-	background: #C9CBFF;
-}
-
 #custom-updates {
 	margin-top: 3px;
 	margin-left: 8px;
@@ -263,7 +239,7 @@ window#waybar.hidden {
 	background: #F5C2E7;
 }
 
-#custom-media {
+#language {
 	margin-top: 3px;
 	margin-left: 8px;
 	padding-left: 10px;
@@ -272,5 +248,5 @@ window#waybar.hidden {
 	border-radius: 10px;
 	transition: none;
 	color: #161320;
-	background: #F2CDCD;
+	background: #89DCEB;
 }
