--- a/waybar/style.css
+++ b/waybar/style.css
@@ -276,3 +276,15 @@ window#waybar.hidden {
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
+
+#custom-email {
+    margin-top: 3px;
+    margin-left: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 3px;
+    border-radius: 10px;
+    transition: none;
+    color: #161320;
+    background: #F28FAD;
+}
